--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@
       {
         id: "audio15",
         audioSrc: "https://www.dropbox.com/scl/fi/rpcuad35hjh9pnwm890mt/CONFIA-EN-MIALEXX-CRAZY-FT-SAIN-NT-DOBLE-AA-NC-BEATS.mp3?rlkey=lcom1zmvuhptrui5cyyxex7vj&st=7f76fnfo&raw=1", // Audio de muestra 2
-        cover: "http://i.postimg.cc/cHwpq9xH/Picsart-25-06-04-21-53-31-587.jpg",
+        cover: "https://i.postimg.cc/cHwpq9xH/Picsart-25-06-04-21-53-31-587.jpg",
         title: "Confia en mi",
         artist: "Alexx Crazy Ft Sain Nt",
         album: "HFcompany",
