--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music Live</title>
+  <link rel="icon" href="https://i.postimg.cc/bNprg8kh/Screenshot-20250606-180521.jpg" type="image/x-icon">
+  <!-- Para compatibilidad con todos los dispositivos, puedes agregar también: -->
+  <link rel="shortcut icon" href="https://i.postimg.cc/bNprg8kh/Screenshot-20250606-180521.jpg" type="image/x-icon">
+</head>
   <style>
     body {
       margin: 0;
