--- a/index.html
+++ b/index.html
@@ -997,6 +997,16 @@
     // Datos de las canciones con archivos de audio
     const audioData = [
       {
+        id: "audio40",
+        audioSrc: "https://www.dropbox.com/scl/fi/hgi19gmw1o5fef57p2a8t/Lo-que-es-amar.wav?rlkey=oey80gh0tzx4gk3a37hbh51u7&st=j8g3eloz&raw=1", // Audio de muestra 2
+        cover: "https://i.postimg.cc/sf9vGFrQ/Picsart-25-06-06-19-11-54-546.jpg",
+        title: "Para amarte cover",
+        artist: "Sain Nt",
+        album: "",
+        category: ["mostPlayed"],
+        releaseDate: "2023-07-15"
+      },
+      {
         id: "audio39",
         audioSrc: "https://www.dropbox.com/scl/fi/8rxh1zmz1jnbw3jnyw30u/Todo-se-Acabo-Emsek.wav?rlkey=gdjt2d5ixehg02f66zrmn2oo4&st=0i6u59nc&raw=1", // Audio de muestra 2
         cover: "https://i.postimg.cc/qqQFNy5t/Picsart-25-06-05-20-49-57-522.jpg",
