--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
     .song-title {
       display: block;
-      color: #fff;
-      font-size: 14px;
+      color: #ffa600;
+      font-size: 10px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -300,22 +300,11 @@
     }
 
     #floatingPlayer img {
-      width: 100%;
+      width: 90%;
       height: auto;
-      border-radius: 1000px;
-      margin-bottom: 15px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      animation: rotate 3s linear infinite;
-      transform-origin: center center;
-    }
-
-    @keyframes rotate {
-      from {
-          transform: rotate(0deg);
-      }
-      to {
-          transform: rotate(360deg);
-      }
+      border-radius: 10px;
+      margin-bottom: 12px;
+      box-shadow: 0 4px 8px rgba(255, 145, 0, 0.5);
     }
 
     #closeButton {
@@ -374,13 +363,8 @@
       font-size: 16px;
     }
 
-    #controls button:hover {
-      color: #ff5e01;
-      transform: scale(1.1);
-    }
-
     #playPauseButton {
-      background: #ff5e01 !important;
+      background: #000000 !important;
       color: white !important;
       border-radius: 50%;
       width: 40px !important;
@@ -390,7 +374,7 @@
     }
 
     #playPauseButton:hover {
-      background: #ff8c00 !important;
+      background: hsl(30, 1%, 40%) !important;
       transform: scale(1.1) !important;
     }
 
@@ -406,7 +390,7 @@
 
     #progressBar {
       height: 100%;
-      background: #ff5e01;
+      background: #ffffff;
       border-radius: 3px;
       width: 0%;
       transition: width 0.1s linear;
@@ -416,7 +400,7 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
-      color: #aaa;
+      color: #ffffff;
       font-size: 12px;
       margin-bottom: 10px;
     }
@@ -438,19 +422,8 @@
       width: auto;
     }
 
-    #floatingPlayer.minimized #controls button {
-      padding: 5px;
-      font-size: 14px;
-    }
-
-    #floatingPlayer.minimized #playPauseButton {
-      width: 30px !important;
-      height: 30px !important;
-      padding: 5px !important;
-    }
-
     #playPauseButton {
-      background: #ff5e01 !important;
+      background: #000000 !important;
       width: 50px;
       height: 50px;
     }
@@ -912,7 +885,7 @@
     <div id="info">
       <strong id="songTitle">Título</strong><br>
       <small id="artistName">Artista</small><br>
-      <small id="albumTitle">Álbum</small>
+      <small id="albumTitle">Álbum</small><br>
     </div>
 
     <!-- En el HTML, agrega el contenedor de progreso -->
@@ -996,6 +969,26 @@
 
     // Datos de las canciones con archivos de audio
     const audioData = [
+      {
+        id: "audio42",
+        audioSrc: "https://www.dropbox.com/scl/fi/higcv4yxhf2z1exl4zovy/4-Linea-de-Meta-Tonny-Reyes.flac?rlkey=vkvhv5i73k8q3i25dx3vx9h7k&st=0eivekjo&raw=1", // Audio de muestra 2
+        cover: "https://i.postimg.cc/szcBZ488/Picsart-25-06-07-19-49-43-853.jpg",
+        title: "Linea de meta",
+        artist: "Tonny Reyes",
+        album: "",
+        category: ["mostPlayed"],
+        releaseDate: "2023-07-15"
+      },
+    {
+        id: "audio41",
+        audioSrc: "https://www.dropbox.com/scl/fi/pfrrfwvor80tartdkb4jh/2-Quiero-un-amor-Kinny-ft-Sain-Nt.flac?rlkey=bqvu00qnn8g5ztlmql2oxsvnu&st=06ueyhu1&raw=1", // Audio de muestra 2
+        cover: "https://i.postimg.cc/8CZv7ZV7/Picsart-25-06-07-19-43-18-267.jpg",
+        title: "Promesa de amor",
+        artist: "Kinny Dr",
+        album: "",
+        category: ["mostPlayed"],
+        releaseDate: "2023-07-15"
+      },
       {
         id: "audio40",
         audioSrc: "https://www.dropbox.com/scl/fi/hgi19gmw1o5fef57p2a8t/Lo-que-es-amar.wav?rlkey=oey80gh0tzx4gk3a37hbh51u7&st=j8g3eloz&raw=1", // Audio de muestra 2
